[gd_scene load_steps=5 format=3 uid="uid://m2ekrfpmin3k"]

[ext_resource type="Script" path="res://ui/menus/title_screen/title_screen.gd" id="1_bdtes"]
[ext_resource type="Texture2D" uid="uid://unnu321qmcg" path="res://ui/menus/title_screen/game_title.png" id="1_iplvx"]
[ext_resource type="Texture2D" uid="uid://cgae0l5g6t0ha" path="res://ui/menus/title_screen/button_start.png" id="2_fvtxu"]
[ext_resource type="Script" path="res://ui/menus/title_screen/my_start_button.gd" id="3_jr4nv"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bdtes")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_iplvx")
expand_mode = 2
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = 60.0
offset_right = 248.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(248, 117)
texture_normal = ExtResource("2_fvtxu")
texture_pressed = ExtResource("2_fvtxu")
texture_hover = ExtResource("2_fvtxu")
stretch_mode = 5
script = ExtResource("3_jr4nv")

[node name="GameStartTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="button_down" from="TextureButton" to="TextureButton" method="_on_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="button_up" from="TextureButton" to="TextureButton" method="_on_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="TextureButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton" method="_on_mouse_exited"]
[connection signal="timeout" from="GameStartTimer" to="." method="_on_game_start_timer_timeout"]
